style - reduced navbar-brand size (better support for small mobile resolutions)

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
 <body>
 
   <header class="navbar">
-    <section class="navbar-section">
-      <a href="index.html" class="g-title text-capitalize navbar-brand ml-2 mr-2">Todos</a>
+    <section class="navbar-section ml-2">
+      <a href="index.html" class="navbar-brand g-title text-capitalize">Todos</a>
     </section>
-    <section class="navbar-section">
-      <div id="auth-state" class="input-group input-inline mr-2">
+    <section class="navbar-section mr-2">
+      <div id="auth-state" class="input-group input-inline">
         <!-- ... -->
       </div>
     </section>
