loading feedback on buttons added

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
       </div>
       <div class="modal-footer">
         <span id="sign-in-message"></span>
-        <button class="btn btn-primary" form="form-sign-in" type="submit">Sign In</button>
+        <button id="button-sign-in" class="btn btn-primary" form="form-sign-in" type="submit">Sign In</button>
       </div>
     </div>
   </div>
@@ -83,7 +83,7 @@
       </div>
       <div class="modal-footer">
         <span id="sign-up-message"></span>
-        <button class="btn btn-primary" form="form-sign-up" type="submit">Sign Up</button>
+        <button id="button-sign-up" class="btn btn-primary" form="form-sign-up" type="submit">Sign Up</button>
       </div>
     </div>
   </div>
@@ -119,7 +119,7 @@
       </div>
       <div class="modal-footer">
         <span id="add-todo-message"></span>
-        <button class="btn btn-primary" form="form-todos-add" type="submit">Add</button>
+        <button id="button-todos-add" class="btn btn-primary" form="form-todos-add" type="submit">Add</button>
       </div>
     </div>
   </div>
